# VizApp

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  ruff.toml  run.py
app/: config.py  viz3 copy 2.py  viz3 copy.py  viz3.py  viz4.py  viz5.py  vizapply.py
data/: analysis_and_histograms.json  mock_database.json  mock_database_new.json  mock_database_new2.json
notebooks/: histogram_test.ipynb  icon_creator.ipynb  mock_data.ipynb  mock_data2.ipynb  mock_data3.ipynb  mock_data_generator.ipynb
src/ModelViz.egg-info/: SOURCES.txt  requires.txt
src/modelviz/: config.py  data_loader.py  data_utils.py  dataframe_display.py  keygen.py  plotting.py  sidebar_setup.py
tests/: test_keygen.py
